# Static-Program-Analyzer

./: .gitignore  README.md  Tokeniser
Team15/Code15/src/spa/: CMakeLists.txt
Team15/Code15/src/spa/src/: AbstractClause.h  AbstractionTable.cpp  AbstractionTable.h  AssignTable.cpp  AssignTable.h  CallTable.cpp  CallTable.h  ConstantTable.cpp  ConstantTable.h  DesignExtractor.cpp  Driver.cpp  Driver.h  EntityStorage.cpp  EntityStorage.h  EntityTable.cpp  EntityTable.h  FollowsStarTable.cpp  FollowsStarTable.h  FollowsTable.cpp  FollowsTable.h  IfTable.cpp  IfTable.h  ModifiesProcedureTable.cpp  ModifiesProcedureTable.h  ModifiesStatementTable.cpp  ModifiesStatementTable.h  PKB.cpp  PKB.h  PQLConstants.h  PQLDriver.cpp  PQLDriver.h  PQLEvaluator.cpp  PQLEvaluator.h  PQLOneSynonymCheck.cpp  PQLOneSynonymCheck.h  PQLParser.cpp  PQLParser.h  PQLPreprocessor.cpp  PQLPreprocessor.h  PQLRefConsistentCheck.cpp  (+54 more)
Team15/Code15/src/spa/src/QPS/: CMakeLists.txt  PQLDriver.cpp  PQLDriver.h  PQLEvaluator.cpp  PQLEvaluator.h  PQLOneSynonymCheck.cpp  PQLOneSynonymCheck.h  PQLPreprocessor.cpp  PQLPreprocessor.h  PQLRefConsistentCheck.cpp  PQLRefConsistentCheck.h  PQLSemanticCheck.cpp  PQLSemanticCheck.h  PQLSyntaxChecker.cpp  PatternClause.cpp  PatternClause.h  Query.cpp  Query.h  QueryTokenizer.cpp  QueryTokenizer.h  SynonymTable.cpp
Team15/Code15/src/spa/src/QPS/include/: PQLDriver.h
Team15/Code15/src/spa/src/QPS/relationship_handlers/: ClauseHandler.cpp  ClauseHandler.h  FollowsHandler.cpp  FollowsHandler.h  ModifiesHandler.cpp  ModifiesHandler.h  ModifiesPHandler.cpp  ModifiesPHandler.h  ModifiesSHandler.cpp  ModifiesSHandler.h  ParentHandler.cpp  ParentHandler.h  PatternHandler.cpp  PatternHandler.h  Result.cpp  Result.h  ResultTable.cpp  SelectHandler.cpp  SelectHandler.h  UsesHandler.cpp  UsesHandler.h
Team15/Code15/src/spa/src/QPS/src/: PQLDriver.cpp
Team15/Code15/src/spa/src/clause_handlers/: ClauseHandler.cpp  ClauseHandler.h
Team15/Code15/src/spa/src/common/: CMakeLists.txt
Team15/Code15/src/spa/src/exceptions/: PQLSemanticError.h  PQLSyntaxError.h
Team15/Code15/src/spa/src/pkb/: CMakeLists.txt
Team15/Code15/src/spa/src/pkb/include/: PKB.h
Team15/Code15/src/spa/src/pkb/src/: PKB.cpp
Team15/Code15/src/spa/src/qps/: CMakeLists.txt
Team15/Code15/src/spa/src/qps/include/: PQLDriver.h
Team15/Code15/src/spa/src/qps/src/: PQLDriver.cpp
Team15/Code15/src/spa/src/relationship_handlers/: ClauseHandler.cpp  ClauseHandler.h  FollowsHandler.cpp  FollowsHandler.h  FollowsStarHandler.cpp  FollowsStarHandler.h  ModifiesHandler.h  ParentHandler.cpp  ParentHandler.h  Result.cpp  Result.h  ResultTable.cpp  ResultTable.h  SelectHandler.cpp  SelectHandler.h
Team15/Code15/src/spa/src/source_processor/: CMakeLists.txt
Team15/Code15/src/spa/src/source_processor/include/: SourceProcessor.h
Team15/Code15/src/spa/src/source_processor/src/: SourceProcessor.cpp  TokenMap.cpp
Team15/Code15/src/spa/src/sp/: CMakeLists.txt
Team15/Code15/src/spa/src/sp/include/: SourceProcessor.h
Team15/Code15/src/spa/src/sp/src/: SourceProcessor.cpp
Team15/Code15/src/spa/src/util/: StringOperations.cpp
Team15/Code15/src/unit_testing/: CMakeLists.txt
Team15/Code15/src/unit_testing/src/: TestCombineResults.cpp  TestEvaluator.cpp  TestOverall.cpp  TestPQLConsistentLogic.cpp  TestPQLPreprocessor.cpp  TestPQLSemanticCheck.cpp  TestTokeniser.cpp
Team15/Code15/src/unit_testing/src/TestUtils/: TestUtils.cpp  TestUtils.h
Team15/Code15/src/unit_testing/src/common/utils/: TestStringOperations.cpp
Team15/Code15/src/unit_testing/src/source_processor/: Old_TestTokeniser.cpp
Team15/Code15/src/unit_testing/src/source_processor/extractor/: Constants.cpp  Constants.hpp  TestAssignsRelationShipExtractor.cpp  TestConstantExtractor.cpp  TestExtractor.cpp  TestExtractor.h  TestFollowsRelationshipExtractor.cpp  TestModifiesRelationshipExtractor.cpp  TestParentsRelationshipExtractor.cpp  TestProcedureExtractor.cpp  TestStatementExtractor.cpp  TestUsesRelationShipExtractor.cpp  TestVariableExtractor.cpp
Team15/Code15/src/unit_testing/src/source_processor/parser/: TestParser.cpp  TestParser.h
Team15/Code15/src/unit_testing/src/source_processor/tokeniser/: TestTokeniser.cpp
Team15/Code15/src/unit_testing/src/test_QPS/: TestCombineResults.cpp  TestEvaluator.cpp  TestPQLConsistentLogic.cpp  TestPQLOneSynonymCheck.cpp  TestPQLPreprocessor.cpp  TestPQLSemanticCheck.cpp  TestPQLSyntaxCheck.cpp
Team15/Code15/src/unit_testing/src/test_QPS/test_model/: TestResultTable.cpp
Team15/Code15/src/unit_testing/src/test_QPS/test_relationship_handles/: PKBStub.h  TestAffectsHandler.cpp  TestCallsHandler.cpp  TestClauseHandler.cpp  TestCombineResults.cpp  TestFollowHandler.cpp  TestModifiesPHandler.cpp  TestModifiesSHandler.cpp  TestMultipleClauses.cpp  TestNextHandler.cpp  TestParentHandler.cpp  TestPatternHandler.cpp  TestSelectHandler.cpp  TestSynonymLinkageMap.cpp  TestUsesPHandler.cpp  TestUsesSHandler.cpp  TestUtility.h  TestWithHandler.cpp
Team15/Code15/src/unit_testing/src/test_qps/: TestPQLPreprocessor.cpp  TestPQLSemanticCheck.cpp  TestPQLSyntaxCheck.cpp
Team15/Code15/src/unit_testing/src/test_qps/test_model/: TestResultTable.cpp
Team15/Code15/src/unit_testing/src/test_qps/test_relationship_handles/: TestAffectsHandler.cpp  TestCallsHandler.cpp  TestClauseHandler.cpp  TestFollowHandler.cpp  TestModifiesSHandler.cpp  TestMultipleClauses.cpp  TestNextHandler.cpp  TestParentHandler.cpp  TestUsesPHandler.cpp  TestUsesSHandler.cpp  TestWithHandler.cpp
Team15/Code15/src/unit_testing/src/test_relationship_handles/: PKBStub.cpp  PKBStub.h  TestCombineResults.cpp  TestFollowHandler.cpp  TestModifiesSHandler.cpp  TestMultipleClauses.cpp  TestParentHandler.cpp  TestPatternHandler.cpp  TestSelectHandler.cpp  TestSynonymLinkageMap.cpp
Team15/Code15/src/unit_testing/src/test_source_processor/extractor/: Constants.cpp  Constants.hpp  TestAffectsRelationshipExtractor.cpp  TestCFGGenerator.cpp  TestConditionalRelationshipExtractor.cpp  TestConstantExtractor.cpp  TestFollowsRelationshipExtractor.cpp  (+5 more)
(+448 files in other folders)
